--- a/test.html
+++ b/test.html
@@ -1,96 +1,61 @@
-<section id="fence-quote" style="max-width:900px;margin:30px auto;padding:25px;background:#fff;border:1px solid #ccc;">
-<h2>Instant Garden Fence Quote</h2>
-<p>Enter the length of your fence and see a visual layout along with the cost.</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Garden Fence Quote Calculator | Instant Online Estimate</title>
+<meta name="description" content="Get an instant garden fence quote. Enter fence length, number of gates, and see a visual layout with cost breakdown.">
+
+<style>
+body { font-family: Arial, sans-serif; background: #f8f8f8; color: #222; margin:0; padding:0; line-height:1.6; }
+main { max-width:900px; margin:30px auto; padding:25px; background:#fff; border:1px solid #ccc; }
+h1, h2 { color:#000; }
+label { font-weight: bold; display:block; margin-top:15px; }
+input[type=number] { width:100%; padding:10px; font-size:16px; margin-top:5px; }
+button { margin-top:20px; padding:12px 24px; background:#000; color:#fff; border:none; border-radius:6px; font-weight:bold; cursor:pointer; }
+button:hover, button:focus { background:#333; outline:none; }
+#fenceResult ul { padding-left:20px; }
+canvas { border:1px solid #ccc; margin-top:20px; width:100%; height:120px; }
+#tooltip { position:absolute; padding:5px 10px; background:#333; color:#fff; border-radius:4px; font-size:14px; display:none; pointer-events:none; }
+</style>
+</head>
+<body>
+<main>
+<h1>Instant Garden Fence Quote</h1>
+<section aria-labelledby="quote-form-title">
+<h2 id="quote-form-title">Calculate Your Fence Cost</h2>
+<p>Enter the length of your fence and number of gates to get a cost breakdown and visual layout.</p>
 
 <form id="fenceForm">
-<label for="length">Length of fencing (metres)*</label><br>
-<input type="number" id="length" name="length" min="1" step="0.01" required style="width:100%;padding:10px;margin-bottom:15px;font-size:16px;"><br>
+<label for="length">Length of fencing (metres)*</label>
+<input type="number" id="length" name="length" min="1" step="0.01" required aria-required="true">
 
-<label for="numGates">Number of gates:</label><br>
-<input type="number" id="numGates" name="numGates" min="0" step="1" value="0" style="width:100%;padding:10px;margin-bottom:15px;font-size:16px;"><br>
+<label for="numGates">Number of gates</label>
+<input type="number" id="numGates" name="numGates" min="0" step="1" value="0" aria-required="true">
 
-<button type="button" onclick="calculateFenceQuote()" style="margin-top:15px;padding:12px 24px;background:#000;color:#fff;border:2px solid #000;border-radius:6px;font-weight:bold;">Get Quote</button>
+<button type="button" onclick="calculateFenceQuote()">Get Quote</button>
 </form>
 
-<div id="fenceResult" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
+<div id="fenceResult" aria-live="polite"></div>
 
-<canvas id="fenceCanvas" width="800" height="120" style="border:1px solid #ccc;margin-top:20px;cursor:pointer;"></canvas>
-<div id="tooltip" style="position:absolute;padding:5px 10px;background:#333;color:#fff;border-radius:4px;font-size:14px;display:none;pointer-events:none;"></div>
-<div id="clickInfo" style="margin-top:10px;font-size:16px;font-weight:bold;"></div>
+<canvas id="fenceCanvas" width="800" height="120" role="img" aria-label="Visual layout of the fence showing panels, posts, and gates"></canvas>
+<div id="tooltip" role="tooltip"></div>
 </section>
+</main>
 
-<script>
+<script defer>
 let elements = [];
-let gateElements = [];
-let selectedElement = null;
-let draggingGate = null;
-let fenceLength = 0;
 
 function calculateFenceQuote() {
 const lengthInput = document.getElementById('length').value.trim().replace(',', '.');
-fenceLength = parseFloat(lengthInput);
+const fenceLength = parseFloat(lengthInput);
+
 if (isNaN(fenceLength) || fenceLength <= 0) {
 alert("Please enter a valid length in metres.");
 return;
 }
 
-const numGatesInput = parseInt(document.getElementById('numGates').value);
-const numGates = isNaN(numGatesInput) ? 0 : Math.max(0, numGatesInput);
-
-drawFence(numGates);
-updateQuote(numGates);
-}
-
-// Draw fence with multiple gates
-function drawFence(numGates) {
-const canvas = document.getElementById('fenceCanvas');
-const ctx = canvas.getContext('2d');
-ctx.clearRect(0, 0, canvas.width, canvas.height);
-elements = [];
-gateElements = [];
-selectedElement = null;
-
-const panelLength = 1.82;
-const postHeight = 80;
-const canvasWidth = canvas.width - 20;
-
-// Calculate panels
-let availableLength = fenceLength - numGates; // 1m per gate
-const panels = Math.ceil(availableLength / panelLength);
-const posts = panels + 2;
-const unit = canvasWidth / (posts - 1);
-
-// Draw posts
-for (let i = 0; i < posts; i++) {
-const x = 10 + i * unit;
-ctx.fillStyle = 'brown';
-ctx.fillRect(x, 10, 5, postHeight);
-elements.push({type:'post', x:x, y:10, width:5, height:postHeight, text:`Post ${i+1} (£18)`});
-}
-
-// Draw panels
-ctx.fillStyle = 'sandybrown';
-for (let i = 0; i < panels; i++) {
-const x = 10 + i * unit + 5;
-ctx.fillRect(x, 10, unit - 5, postHeight);
-elements.push({type:'panel', x:x, y:10, width:unit-5, height:postHeight, text:`Panel ${i+1} (£40)`});
-}
-
-// Draw gates evenly spaced
-for (let g = 0; g < numGates; g++) {
-const gateX = 10 + ((g + 1) * canvasWidth) / (numGates + 1) - unit/2;
-ctx.fillStyle = 'green';
-ctx.fillRect(gateX, 10, unit, postHeight);
-ctx.fillStyle = 'black';
-ctx.fillText('Gate', gateX + unit/4, 50);
-const gateEl = {type:'gate', x:gateX, y:10, width:unit, height:postHeight, text:`Gate ${g+1} (£150)`};
-elements.push(gateEl);
-gateElements.push(gateEl);
-}
-}
-
-// Update quote dynamically
-function updateQuote(numGates) {
+const numGates = parseInt(document.getElementById('numGates').value) || 0;
 const panelLength = 1.82;
 const panelCost = 40;
 const postCost = 18;
@@ -98,12 +63,12 @@ const gravelBoardCost = 20;
 const postcreteCost = 7;
 const labourRate = 50;
 
-let availableLength = fenceLength - numGates;
-const panels = Math.ceil(availableLength / panelLength);
+const chargeableLength = fenceLength - numGates;
+const panels = Math.ceil(chargeableLength / panelLength);
 const posts = panels + 2;
-const gravelBoards = panels;
 const cementBags = posts * 2;
-const labour = availableLength * labourRate;
+const gravelBoards = panels;
+const labour = chargeableLength * labourRate;
 const gateCost = numGates * 150;
 
 const panelsTotal = panels * panelCost;
@@ -117,18 +82,53 @@ resultHTML += `<li>Fence panels (${panels} × £${panelCost}): £${panelsTotal.t
 resultHTML += `<li>Concrete posts (${posts} × £${postCost}): £${postsTotal.toFixed(2)}</li>`;
 resultHTML += `<li>Gravel boards (${gravelBoards} × £${gravelBoardCost}): £${gravelTotal.toFixed(2)}</li>`;
 resultHTML += `<li>Postcrete bags (${cementBags} × £${postcreteCost}): £${postcreteTotal.toFixed(2)}</li>`;
-resultHTML += `<li>Labour (${availableLength.toFixed(2)} m × £${labourRate}): £${labour.toFixed(2)}</li>`;
+resultHTML += `<li>Labour (${chargeableLength.toFixed(2)} m × £${labourRate}): £${labour.toFixed(2)}</li>`;
 if (numGates > 0) resultHTML += `<li>Gates (${numGates} × £150): £${gateCost.toFixed(2)}</li>`;
 resultHTML += `</ul><p><strong>Total price: £${total.toFixed(2)}</strong></p>`;
 document.getElementById('fenceResult').innerHTML = resultHTML;
+
+drawFence(panels, posts, numGates);
 }
 
-// Mouse events for multiple draggable gates
+function drawFence(panels, posts, numGates) {
+const canvas = document.getElementById('fenceCanvas');
+const ctx = canvas.getContext('2d');
+ctx.clearRect(0, 0, canvas.width, canvas.height);
+elements = [];
+
+const canvasWidth = canvas.width - 20;
+const postHeight = 80;
+const unit = canvasWidth / (posts - 1);
+
+for (let i = 0; i < posts; i++) {
+const x = 10 + i * unit;
+ctx.fillStyle = 'brown';
+ctx.fillRect(x, 10, 5, postHeight);
+elements.push({type:'post', x:x, y:10, width:5, height:postHeight, text:`Post ${i+1}`});
+}
+
+ctx.fillStyle = 'sandybrown';
+for (let i = 0; i < panels; i++) {
+const x = 10 + i * unit + 5;
+ctx.fillRect(x, 10, unit-5, postHeight);
+elements.push({type:'panel', x:x, y:10, width:unit-5, height:postHeight, text:`Panel ${i+1}`});
+}
+
+for (let g = 0; g < numGates; g++) {
+const gateIndex = Math.floor((g + 1) * panels / (numGates + 1));
+const x = 10 + gateIndex * unit + 5;
+ctx.fillStyle = 'green';
+ctx.fillRect(x, 10, unit, postHeight);
+ctx.fillStyle = 'black';
+ctx.fillText('Gate', x + unit/4, 50);
+elements.push({type:'gate', x:x, y:10, width:unit, height:postHeight, text:`Gate ${g+1} (£150)`});
+}
+}
+
 const canvas = document.getElementById('fenceCanvas');
 const tooltip = document.getElementById('tooltip');
-const clickInfo = document.getElementById('clickInfo');
 
-canvas.addEventListener('mousemove', function(e) {
+canvas.addEventListener('mousemove', e => {
 const rect = canvas.getBoundingClientRect();
 const mouseX = e.clientX - rect.left;
 const mouseY = e.clientY - rect.top;
@@ -138,69 +138,15 @@ for (let el of elements) {
 if (mouseX >= el.x && mouseX <= el.x + el.width &&
 mouseY >= el.y && mouseY <= el.y + el.height) {
 tooltip.style.display = 'block';
-tooltip.style.left = (e.clientX + 10) + 'px';
-tooltip.style.top = (e.clientY + 10) + 'px';
+tooltip.style.left = `${e.clientX + 10}px`;
+tooltip.style.top = `${e.clientY + 10}px`;
 tooltip.innerText = el.text;
 found = true;
 break;
 }
 }
 if (!found) tooltip.style.display = 'none';
-
-if (draggingGate) {
-let newX = mouseX - draggingGate.width / 2;
-const minX = 10;
-const maxX = canvas.width - 10 - draggingGate.width;
-draggingGate.x = Math.min(Math.max(newX, minX), maxX);
-drawFence(gateElements.length);
-updateQuote(gateElements.length);
-}
 });
 
-canvas.addEventListener('mousedown', function(e) {
-const rect = canvas.getBoundingClientRect();
-const mouseX = e.clientX - rect.left;
-const mouseY = e.clientY - rect.top;
-
-draggingGate = null;
-for (let gate of gateElements) {
-if (mouseX >= gate.x && mouseX <= gate.x + gate.width &&
-mouseY >= gate.y && mouseY <= gate.y + gate.height) {
-draggingGate = gate;
-clickInfo.innerText = 'Dragging gate...';
-break;
-}
-}
-});
-
-canvas.addEventListener('mouseup', function() {
-if (draggingGate) clickInfo.innerText = 'Gate position updated';
-draggingGate = null;
-});
-
-canvas.addEventListener('mouseleave', function() {
-tooltip.style.display = 'none';
-draggingGate = null;
-});
-
-canvas.addEventListener('click', function(e) {
-const rect = canvas.getBoundingClientRect();
-const mouseX = e.clientX - rect.left;
-const mouseY = e.clientY - rect.top;
-let clicked = false;
-
-for (let el of elements) {
-if (mouseX >= el.x && mouseX <= el.x + el.width &&
-mouseY >= el.y && mouseY <= el.y + el.height) {
-selectedElement = el;
-clicked = true;
-clickInfo.innerText = `You clicked: ${el.text}`;
-break;
-}
-}
-if (!clicked) {
-selectedElement = null;
-clickInfo.innerText = '';
-}
-});
+canvas.addEventListener('mouseleave', () => tooltip.style.display = 'none');
 </script>
