--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="viewport" content="width=device-width,initial-scale=1" user-scalable=no/>
 <title>Fence Installation & Gate Fitting in Askern DN6 | Repairs, Sheds & Timber Storage</title>
 
 <link rel="canonical" href="https://steely1968.github.io/">
