--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -19,6 +19,12 @@ background:#f9f9f9;
 color:#222;
 line-height:1.65;
 }
+  html{
+-webkit-text-size-adjust: 100%;     
+}
+input#sqm {
+font-size: 25px;
+}
 header{
 text-align:center;
 padding:25px 10px;
