--- a/services/fence-installation.html
+++ b/services/fence-installation.html
@@ -178,7 +178,7 @@ button:hover, button:focus { background:#333; outline:none; }
 </head>
 <body>
 <main>
-<h1>Instant Garden Fence Quote</h1>
+<h1>Instant Garden Fence Quote Estimate</h1>
 <section aria-labelledby="quote-form-title">
 <h2 id="quote-form-title">Calculate Your Fence Cost</h2>
 <p>Enter the length of your fence and number of gates to get a cost breakdown.</p>
