--- a/testing.html
+++ b/testing.html
@@ -1,85 +1,29 @@
-<section id="pressure-wash-quote" style="max-width:900px;margin:30px auto;padding:25px;background:#fff;border:1px solid #ccc;">
-<h2>Instant Pressure Washing Quote</h2>
-<p>Use this calculator to get an estimate for your pressure washing service.</p>
+<header>
+<img src="/images/logo.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
 
-<form id="quoteForm">
-<label for="sqm">How many square metres?*</label><br>
-<input type="number" id="sqm" name="sqm" min="1" step="0.01" required style="width:100%;padding:8px;margin:6px 0;"><br>
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
 
-<input type="checkbox" id="jetwash" name="jetwash" checked>
-<label for="jetwash">Jet wash only</label><br>
+<br>
 
-<input type="checkbox" id="fungicide" name="fungicide">
-<label for="fungicide">Fungicide treatment</label><br>
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</header>
 
-<input type="checkbox" id="hardbrush" name="hardbrush">
-<label for="hardbrush">Hard brush</label><br>
+<footer>
+© Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
 
-<input type="checkbox" id="resanding" name="resanding">
-<label for="resanding">Resanding</label><br>
-
-<input type="checkbox" id="sealing" name="sealing">
-<label for="sealing">Sealing</label><br>
-
-<button type="button" onclick="calculateQuote()" style="margin-top:15px;padding:12px 24px;background:#000;color:#fff;border:2px solid #000;border-radius:6px;font-weight:bold;">Get Quote</button>
-</form>
-
-<div id="quoteResult" style="margin-top:20px;font-size:18px;font-weight:bold;"></div>
-</section>
-
-<script>
-function calculateQuote() {
-// Accept comma or dot decimals
-const sqmInput = document.getElementById('sqm').value.trim().replace(',', '.');
-const sqm = parseFloat(sqmInput);
-
-if (isNaN(sqm) || sqm <= 0) {
-alert("Please enter a valid number of square metres.");
-return;
-}
-
-let total = 40; // Base service fee
-let selectedOptions = [];
-
-// Add explanation for the base fee (always included)
-selectedOptions.push(`Base service fee (travel, setup & loading): £40.00`);
-
-// Options
-if (document.getElementById('jetwash').checked) {
-let price = sqm * 2.5;
-selectedOptions.push(`Jet wash only: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('fungicide').checked) {
-let price = sqm * 0.8;
-selectedOptions.push(`Fungicide treatment: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('hardbrush').checked) {
-let price = sqm * 0.7;
-selectedOptions.push(`Hard brush: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('resanding').checked) {
-let price = sqm * 3.5;
-selectedOptions.push(`Resanding: £${price.toFixed(2)}`);
-total += price;
-}
-if (document.getElementById('sealing').checked) {
-let price = sqm * 4.5;
-selectedOptions.push(`Sealing: £${price.toFixed(2)}`);
-total += price;
-}
-
-total = total.toFixed(2);
-
-// Build HTML Output
-let resultHTML = `<p><strong>You selected:</strong></p><ul>`;
-selectedOptions.forEach(option => {
-resultHTML += `<li>${option}</li>`;
-});
-resultHTML += `</ul><p><strong>Total price: £${total}</strong></p>`;
-
-document.getElementById('quoteResult').innerHTML = resultHTML;
-}
-</script>
+<footer style="background-color: black; padding: 20px; text-align: center;">
+<p style="color: white;">Our Services:</p>
+<a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
+<a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
+<a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
+<a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
+<a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
+</footer>
+</footer>
