--- a/testing.html
+++ b/testing.html
@@ -1,3 +1,4 @@
+<!-- HEADER -->
 <header>
 <img src="/images/logo.webp"
 alt="Home Repairs 4U logo"
@@ -15,15 +16,16 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
-<footer>
+<!-- FOOTER -->
+<footer style="background-color: black; color: white; text-align: center; padding: 25px 15px; margin-top:40px; font-size:14px;">
 © Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
 
-<footer style="background-color: black; padding: 20px; text-align: center;">
+<div style="background-color: black; padding: 20px; text-align: center; margin-top: 15px;">
 <p style="color: white;">Our Services:</p>
 <a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
 <a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
 <a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
-</footer>
+</div>
 </footer>
