--- a/testing.html
+++ b/testing.html
@@ -1,31 +1,25 @@
-<!-- HEADER -->
 <header>
 <img src="/images/logo.webp"
 alt="Home Repairs 4U logo"
 class="logo"
 width="600" height="200"
 loading="eager">
-
 <div style="text-align:center; margin-top:10px;">
 <a href="https://steely1968.github.io/"
 style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
 </div>
-
 <br>
-
 <a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
 </header>
 
-<!-- FOOTER -->
-<footer style="background-color: black; color: white; text-align: center; padding: 25px 15px; margin-top:40px; font-size:14px;">
+<footer>
 © Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
-
-<div style="background-color: black; padding: 20px; text-align: center; margin-top: 15px;">
+<footer style="background-color: black; padding: 20px; text-align: center;">
 <p style="color: white;">Our Services:</p>
 <a href="/services/Exterior-decorating.html" style="color: white; margin: 0 10px;">Exterior Decorating</a>
 <a href="/services/garden.html" style="color: white; margin: 0 10px;">Garden</a>
 <a href="/services/guttering.html" style="color: white; margin: 0 10px;">Guttering</a>
 <a href="/services/Pressure-washing.html" style="color: white; margin: 0 10px;">Pressure Washing</a>
 <a href="/services/upvc-restoration.html" style="color: white; margin: 0 10px;">uPVC Restoration</a>
-</div>
+</footer>
 </footer>
