--- a/test.html
+++ b/test.html
@@ -5,20 +5,145 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Garden Fence Quote Calculator | Instant Online Estimate</title>
 <meta name="description" content="Get an instant garden fence quote. Enter fence length, number of gates, and receive a cost breakdown.">
+
 <style>
-body { font-family: Arial, sans-serif; background: #f8f8f8; color: #222; margin:0; padding:0; line-height:1.6; }
-main { max-width:900px; margin:30px auto; padding:25px; background:#fff; border:1px solid #ccc; }
-h1, h2 { color:#000; }
-label { font-weight: bold; display:block; margin-top:15px; }
-input[type=number] { width:100%; padding:10px; font-size:16px; margin-top:5px; }
-button { margin-top:20px; padding:12px 24px; background:#000; color:#fff; border:none; border-radius:6px; font-weight:bold; cursor:pointer; }
-button:hover, button:focus { background:#333; outline:none; }
-#fenceResult ul { padding-left:20px; }
+/* ---------------- GLOBAL ---------------- */
+body {
+font-family: Arial, sans-serif;
+background: #f8f8f8;
+color: #222;
+margin: 0;
+padding: 0;
+line-height: 1.6;
+}
+
+/* ---------------- HEADER ---------------- */
+header {
+text-align: center;
+padding: 25px 10px;
+background: #fff;
+border-bottom: 4px solid #27ae60;
+}
+
+.logo {
+max-height: 90px;
+width: auto;
+}
+
+.call-btn {
+display: inline-block;
+margin-top: 18px;
+padding: 14px 28px;
+background: #000;
+color: #fff;
+font-size: 19px;
+text-decoration: none;
+font-weight: bold;
+border-radius: 6px;
+border: 2px solid #000;
+}
+.call-btn:hover {
+background: #333;
+}
+
+/* ---------------- MAIN ---------------- */
+main {
+max-width: 900px;
+margin: 30px auto;
+padding: 25px;
+background: #fff;
+border: 1px solid #ccc;
+}
+
+h1, h2 {
+color: #000;
+}
+
+label {
+font-weight: bold;
+display: block;
+margin-top: 15px;
+}
+
+input[type=number] {
+width: 100%;
+padding: 10px;
+font-size: 16px;
+margin-top: 5px;
+}
+
+button {
+margin-top: 20px;
+padding: 12px 24px;
+background: #000;
+color: #fff;
+border: none;
+border-radius: 6px;
+font-weight: bold;
+cursor: pointer;
+}
+button:hover, button:focus {
+background: #333;
+}
+
+#fenceResult ul {
+padding-left: 20px;
+}
+
+/* ---------------- FOOTER ---------------- */
+.site-footer {
+background: #000;
+color: #fff;
+text-align: center;
+padding: 25px 15px;
+margin-top: 40px;
+font-size: 14px;
+}
+
+.footer-services {
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a {
+color: white;
+margin: 0 10px;
+}
 </style>
 </head>
+
+
 <body>
+
+<!-- ================= HEADER ================= -->
+<header>
+<img src="/images/logo.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600"
+height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">
+Home
+</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
+</header>
+
+
+
+<!-- ================= MAIN CONTENT ================= -->
 <main>
 <h1>Instant Garden Fence Quote</h1>
+
 <section aria-labelledby="quote-form-title">
 <h2 id="quote-form-title">Calculate Your Fence Cost</h2>
 <p>Enter the length of your fence and number of gates to get a cost breakdown.</p>
@@ -37,16 +162,38 @@ button:hover, button:focus { background:#333; outline:none; }
 </section>
 </main>
 
-<script defer>
+
+
+<!-- ================= FOOTER ================= -->
+<footer class="site-footer">
+© Home Repairs 4U | Fencing • Gate Fitting • Repairs • Sheds • Timber Storage | Askern DN6 | Call 07735 873694
+
+<div class="footer-services">
+<p>Our Services:</p>
+
+<a href="/services/Exterior-decorating.html">Exterior Decorating</a>
+<a href="/services/garden.html">Garden</a>
+<a href="/services/guttering.html">Guttering</a>
+<a href="/services/Pressure-washing.html">Pressure Washing</a>
+<a href="/services/upvc-restoration.html">uPVC Restoration</a>
+</div>
+</footer>
+
+
+
+<!-- ================= SCRIPT ================= -->
+<script>
 function calculateFenceQuote() {
 const lengthInput = document.getElementById('length').value.trim().replace(',', '.');
 const fenceLength = parseFloat(lengthInput);
+
 if (isNaN(fenceLength) || fenceLength <= 0) {
 alert("Please enter a valid length in metres.");
 return;
 }
 
 const numGates = parseInt(document.getElementById('numGates').value) || 0;
+
 const panelLength = 1.82;
 const panelCost = 40;
 const postCost = 18;
@@ -54,7 +201,7 @@ const gravelBoardCost = 20;
 const postcreteCost = 7;
 const labourRate = 50;
 
-const chargeableLength = fenceLength - numGates; // Deduct 1m per gate
+const chargeableLength = fenceLength - numGates;
 const panels = Math.ceil(chargeableLength / panelLength);
 const posts = panels + 2;
 const cementBags = posts * 2;
@@ -66,6 +213,7 @@ const panelsTotal = panels * panelCost;
 const postsTotal = posts * postCost;
 const gravelTotal = gravelBoards * gravelBoardCost;
 const postcreteTotal = cementBags * postcreteCost;
+
 const total = panelsTotal + postsTotal + gravelTotal + postcreteTotal + labour + gateCost;
 
 let resultHTML = `<p><strong>Quote breakdown:</strong></p><ul>`;
@@ -74,12 +222,17 @@ resultHTML += `<li>Concrete posts (${posts} × £${postCost}): £${postsTotal.to
 resultHTML += `<li>Gravel boards (${gravelBoards} × £${gravelBoardCost}): £${gravelTotal.toFixed(2)}</li>`;
 resultHTML += `<li>Postcrete bags (${cementBags} × £${postcreteCost}): £${postcreteTotal.toFixed(2)}</li>`;
 resultHTML += `<li>Labour (${chargeableLength.toFixed(2)} m × £${labourRate}): £${labour.toFixed(2)}</li>`;
-if (numGates > 0) resultHTML += `<li>Gates (${numGates} × £150): £${gateCost.toFixed(2)}</li>`;
+
+if (numGates > 0) {
+resultHTML += `<li>Gates (${numGates} × £150): £${gateCost.toFixed(2)}</li>`;
+}
+
 resultHTML += `</ul><p><strong>Total price: £${total.toFixed(2)}</strong></p>`;
 
 document.getElementById('fenceResult').innerHTML = resultHTML;
 }
 </script>
+
 </body>
 </html>
 
