--- a/services/instant-fence-quote.html
+++ b/services/instant-fence-quote.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Instant Garden Fence Quote | Transparent Online Pricing</title>
 <meta name="description" content="Get an instant garden fence quote with fully transparent pricing. Enter your fence length and gates to receive a detailed cost breakdown online.">
-<link rel="canonical" href="https://steely1968.github.io/instant-fence-quote.html">
+<link rel="canonical" href="https://steely1968.github.io/">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
